--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 .calculator {
   width: 50vw;
-  height: 75vh;
+  height: 95vh;
   background-color: #2c2c2c;
   color: #fff;
   margin-top: 10px;
@@ -31,6 +31,7 @@
   margin-top: 10px;
   margin-right: auto;
   margin-left:auto;
+  text-align: right;
   border: 1px solid #929292;
   border-radius: 10px;
 }
@@ -40,7 +41,7 @@
   padding-left: 8px;
   margin: 5px;
   width: auto;
-  height: calc(75% - 3px);
+  height: calc(95% - 3px);
 }
 
 button {
