--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,14 @@
 }
 
 .container {
-  width: 75vw;
+  width: 95vw;
   padding: 15px;
   margin:15px;
 }
 
 .calculator {
-  width: 25vw;
-  height: 50vh;
+  width: 300px;
+  height: 450px;
   background-color: #2c2c2c;
   color: #fff;
   margin-top: 10px;
@@ -41,22 +41,36 @@
   padding-left: 8px;
   margin: 5px;
   width: auto;
-  height: calc(95% - 3px);
+  height: calc(90% - 3px);
 }
 
 button {
-  width: 55px;
-  height: 35px;
+  width: 60px;
+  height: 65px;
   color: #fff;
   margin-top: 10px;
   margin-right: 5px;
   background-color: #3a3a3a;
   border: 1px solid #929292;
   border-radius: 5px;
-  
 }
 
 button:hover{
   background-color: #414141;
   cursor: pointer;
+}
+
+.widebutton {
+  width: 130px;
+  height: 65px;
+  color: #fff;
+  margin-top: 10px;
+  margin-right: 5px;
+  background-color: #3a3a3a;
+  border: 1px solid #929292;
+  border-radius: 5px;
+}
+
+.row{
+  background-color: transparent;
 }
